--- a/index.html
+++ b/index.html
@@ -2,25 +2,44 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>Take My Quiz</title>
-  <link rel="stylesheet" href="./assets/css/style.css"/>
+  <link rel="stylesheet" href="assests/css/style.css"/>
 </head>
 <body>
-<header>
-  <h1 id="highscore">High Score</h1>
-  <aside id="timer">Timer:<span id="count">100</span></aside>
+
+<header class="header">
+  <h1 id="highscore"><a href="#">High Score</a></h1>
+  <div>
+    <div id="timer">Timer: <span id="count">100</span></div>
+  </div>
 </header>
-<div>
-    <button id="start">START QUIZ</button>
-</div>
-<div class="quiz">
-  <h4>Question number 1</h4>
-  <button>A</button>
-  <button>B</button>
-  <button>C</button>
-  <button>D</button>
-</div>
+
+<main class="main">
+
+  <div>
+    <h2>Coding Quiz Challenge</h2>
+    <p>Try to answer the code-related questions within the time limit.  Keep in mind the incorrect
+       answers will penalize you score time by 10 seconds!
+    </p>
+    <button type="button" id="start">Start Quiz</button>
+  </div>
+
+  <div>
+    <section id="quiz">
+      <p id="questn"></p>
+       <ul id="buttons">
+         <li><button id="btn1"></button></li>
+         <li><button id="btn1"></button></li>
+         <li><button id="btn1"></button></li>
+         <li><button id="btn1"></button></li>
+       </ul>
+    </section>
+  </div>
+
+</main>
+
+<script src="assests/js/script.js"></script>
 </body>
-<script src="./assests/js/script.js"></script>
 </html>
