--- a/index.html
+++ b/index.html
@@ -31,10 +31,11 @@
       <p id="questn"></p>
        <ul id="buttons">
          <li><button id="btn1"></button></li>
-         <li><button id="btn1"></button></li>
-         <li><button id="btn1"></button></li>
-         <li><button id="btn1"></button></li>
+         <li><button id="btn2"></button></li>
+         <li><button id="btn3"></button></li>
+         <li><button id="btn4"></button></li>
        </ul>
+       <p id="answer"></p>
     </section>
   </div>
 
