--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <main class="main">
 
-  <div>
+  <div id="challenge">
     <h2>Coding Quiz Challenge</h2>
     <p>Try to answer the code-related questions within the time limit.  Keep in mind the incorrect
        answers will penalize you score time by 10 seconds!
@@ -26,8 +26,8 @@
     <button type="button" id="start">Start Quiz</button>
   </div>
 
-  <div>
-    <section id="quiz">
+  <div id="quiz">
+    <section>
       <p id="questn"></p>
        <ul id="buttons">
          <li><button id="btn1"></button></li>
