--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
     </section>
   </div>
 
-  <section class="form">
+  <div>
+  <section id="quizForm">
     <h3>Quiz Completed</h3>
     <div>
       <p>Final Score: <span id="score"></spaN></p>
@@ -52,6 +53,7 @@
       <button id="submit">Submit</button>
     </form>
   </section>
+  </div>
 
 </main>
 
