--- a/index.html
+++ b/index.html
@@ -49,10 +49,21 @@
       <p>Final Score: <span id="score"></spaN></p>
     </div>
     <form>
-      <input placeholder="Enter Initials" id="initial" />
+      <input placeholder="Enter Initials" maxlength="2" id="initials">
       <button id="submit">Submit</button>
     </form>
   </section>
+  </div>
+
+  <div>
+    <section id="highscore">
+      <h3>High Scores</h3>
+      <p id="score-list"></p>
+      <div>
+        <button id="clearhsbtn">Clear High Scores</button>
+        <button id="backbtn">Back</button>
+      </div>
+    </section>
   </div>
 
 </main>
