CSS is all done

--- a/highscores.html
+++ b/highscores.html
@@ -9,11 +9,11 @@
 </head>
 <body>
 
-  <div>
+  <div id="highscoreform">
     <section id="highscore">
       <h3>High Scores</h3>
       <ul id="score-list"></ul>
-      <div>
+      <div id="twobtn">
         <button id="clearhsbtn">Clear High Scores</button>
         <button id="backbtn">Back</button>
       </div>
